re PR c++/28274 (Redeclaration with extra default argument doesn't work)

PR c++/28274
	* decl.c (duplicate_decls): Call check_default_args here.
	(start_preparsed_function): Do not call check_default_args.
	* name-lookup.c (pushdecl_maybe_friend): Only call
	check_default_args if duplicate_decls got bypassed.

	* g++.dg/other/default5.C: New test.

From-SVN: r115893